bug: z-index purchase section, shop items admin

--- a/client/src/styles/Publishing.scss
+++ b/client/src/styles/Publishing.scss
@@ -277,6 +277,7 @@ input, select {
     font-weight: 600;
     color: #44423f;
     margin-bottom: 12px;
+    z-index: 0;
 }
 
 .f_nav .in_list {
